--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,4 @@ macos/build
 macos/fastlane/node_modules
 macos/fastlane/README.md
 macos/fastlane/report.xml
-macos/Vendor/ONLYOFFICE
+macos/Vendor/UNIVAULTOFFICE
