--- a/win-linux/package/linux/Makefile
+++ b/win-linux/package/linux/Makefile
@@ -1,16 +1,16 @@
 PWD := $(shell pwd)
 
-COMPANY_NAME ?= ONLYOFFICE
+COMPANY_NAME ?= UNIVAULTOFFICE
 PRODUCT_NAME ?= Desktop Editors
 PRODUCT_NAME_SHORT ?= $(subst $(empty) $(empty),,$(PRODUCT_NAME))
 
 COMPANY_NAME_LOW = $(shell echo $(COMPANY_NAME) | tr A-Z a-z)
 PRODUCT_NAME_LOW = $(shell echo $(PRODUCT_NAME_SHORT) | tr A-Z a-z)
 
-PUBLISHER_NAME ?= Ascensio System SIA
-PUBLISHER_URL ?= http://onlyoffice.com
-SUPPORT_URL ?= http://support.onlyoffice.com
-SUPPORT_MAIL ?= support@onlyoffice.com
+PUBLISHER_NAME ?= Univault Technologies
+PUBLISHER_URL ?= http://univaultoffice.github.io
+SUPPORT_URL ?= http://support.univaultoffice.github.io
+SUPPORT_MAIL ?= support@univaultoffice.github.io
 SCHEME_HANDLER ?= oo-office
 
 PRODUCT_VERSION ?= 0.0.0
