--- a/win-linux/extras/projicons/version.rc
+++ b/win-linux/extras/projicons/version.rc
@@ -1,3 +1,9 @@
+#ifndef VER_FILEVERSION_STR
+#define STR_HELPER(x) #x
+#define STR(x) STR_HELPER(x)
+#define VER_FILEVERSION_STR STR(INTVER) "\0"
+#define VER_PRODUCTVERSION_STR STR(INTVER) "\0"
+#endif
 #pragma code_page(65001)
 #include "src/resource.h"
 
