--- a/win-linux/version.rc
+++ b/win-linux/version.rc
@@ -1,3 +1,9 @@
+#ifndef VER_FILEVERSION_STR
+#define STR_HELPER(x) #x
+#define STR(x) STR_HELPER(x)
+#define VER_FILEVERSION_STR STR(INTVER) "\0"
+#define VER_PRODUCTVERSION_STR STR(INTVER) "\0"
+#endif
 #pragma code_page(65001)
 #include <windows.h>
 #include "src/platform_win/resource.h"
@@ -35,4 +41,3 @@ BEGIN
         VALUE "Translation", VER_LANG_ID, VER_CHARSET_ID
     END
 END
-
